--- a/src/components/MainLayoutComp/LowerMainBodyComp/LowerMainBodyComp.module.css
+++ b/src/components/MainLayoutComp/LowerMainBodyComp/LowerMainBodyComp.module.css
@@ -2,14 +2,14 @@
   display: flex;
   flex: 10;
   width: 100%;
-  /* background-color: green; */
+  /* background-color: violet; */
   flex-direction: column;
   align-items: center;
 }
 
 .listGridViewTabContainer {
   display: flex;
-  height: 3rem;
+  min-height: 3rem;
   width: 90%;
   /* background-color: beige; */
   align-items: center;
@@ -25,14 +25,15 @@
   outline-style: none;
   background-color: #ffecd5;
   cursor: pointer;
+  margin-right: 1rem;
 }
 
 .lowerFruitCardGridContainer {
   display: flex;
-  height: 100%;
+  min-height: 40rem;
   width: 90%;
   padding-top: 1rem;
-  background-color: white;
+  /* background-color: white; */
   justify-content: flex-start;
   align-content: flex-start;
   flex-wrap: wrap;
