--- a/src/components/MainLayoutComp/UpperFruitHeaderComp/InnerHeaderComp/InnerHeaderComp.module.css
+++ b/src/components/MainLayoutComp/UpperFruitHeaderComp/InnerHeaderComp/InnerHeaderComp.module.css
@@ -29,7 +29,8 @@
   display: flex;
   height: 70%;
   width: 10rem;
-  background-color: #ffecd5;
+  /* background-color: #ffecd5; */
+  background-color: white;
   border-style: none;
   outline-style: none;
   align-items: center;
@@ -37,4 +38,5 @@
   cursor: pointer;
   font-size: 0.9rem;
   font-family: inherit;
+  margin-right: 1rem;
 }
